<resources>
    <string name="app_name">Yoga Studio</string>
    <string name="schedule">Schedule</string>
    <string name="poses">Poses</string>
    <string name="classes">Class</string>
    <string name="collections">Collections</string>
    <string name="collection">Collection</string>
    <string name="custom">Custom</string>
    <string name="news">News</string>
    <string name="no_classes_found">No class found!</string>
    <string name="clear_all">Clear all</string>
    <string name="loading">Loading...</string>
    <string name="tab_the_add_button_to_create_a_new_class">Tab the add button to create a new class.</string>
    <string name="search">Search</string>
    <string name="result">Result</string>
    <string name="favorites">Favorites</string>
    <string name="blocks">Blocks</string>
    <string name="receive_monthly_class_amp_feature_updates"><![CDATA[Receive monthly class & feature updates]]></string>
    <string name="access_hours_of_exclusive_content">Access hours of exclusive content</string>
    <string name="unlock_all_new_collections">Unlock all new collection</string>
    <string name="upgrade_now">Upgrade Now!</string>
    <string name="ready_for_more">Ready for more?</string>
    <string name="us_pricing_displayed_by_continuing_i_agree_to_yoga_studio_s_terms_and_conditions_and_privacy_policy">US pricing displayed. By continuing, I agree to Yoga Studio’s Terms and Conditions and Privacy Policy</string>
    <string name="then_only_9_99_month_after_free_trial">Then only $9,99/month after free trial</string>
    <string name="start_7_day_free_trial">Start 7-day Free Trial</string>
    <string name="per_month">PER MONTH</string>
    <string name="_7_99">$7,99</string>
    <string name="best_value">Best value</string>
    <string name="_12_months">12 months</string>
    <string name="enter_pose_name">Enter Pose Name</string>
    <string name="volume_cannot_be_changed_for_playlist_containing_drm_protected_songs">Volume cannot be changed for playlist containing DRM protected songs</string>
    <string name="playback">Playback</string>
    <string name="audio">Audio</string>
    <string name="scheduled_classes">Scheduled Classes</string>
    <string name="health_data_connections">Health data connections</string>
    <string name="info">Info</string>
    <string name="health_disclaimer_amp_warn"><![CDATA[Health Disclaimer & Warn]]></string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="subcription_info">Subcription Info</string>
    <string name="visit_website">Visit Website</string>
    <string name="follow_us_on_facebook">Follow us on Facebook</string>
    <string name="follow_us_on_twitter">Follow us on Twitter</string>
    <string name="turn_on_to_enable_downloading_of_classes_over_the_cellular_network_wifi_will_still_be_used_when_available">Turn on to enable downloading of classes over the cellular network. Wifi will still be used when available.</string>
    <string name="downloading">Downloading</string>
    <string name="crash_diagnostics">Crash Diagnostics</string>
    <string name="help_improve_yoga_studio_by_sending_anonymous_reports_upon_application_crash_or_failure_reports_do_not_include_any_personal_or_private_data_requires_a_restart_before_changes_will_take_effect">Help improve Yoga Studio by sending anonymous reports upon application crash or failure. Reports do not include any personal or private data. Requires a restart before changes will take effect.</string>
    <string name="in_app_purchases">In App Purchases</string>
    <string name="restore_content_purchases_you_have_made_in_the_past">Restore content purchases you have made in the past.</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="profile">Profile</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="beginner">Beginner</string>
    <string name="teresa_gonzales">Teresa Gonzales</string>
    <string name="teresagonzales_gmail_com">teresagonzales@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="collection_classes">Collection Class</string>
    <string name="customer_classes">Customer Class</string>
    <string name="music">Music</string>
    <string name="swipe_to_skip_pose">Swipe to Skip Pose</string>
    <string name="show_progress_bar">Show Progress Bar</string>
    <string name="alert">Alert</string>
    <string name="health_app">Health App</string>
    <string name="jawbone_up">Jawbone UP</string>
    <string name="sent_report">Sent report</string>
    <string name="cellura_data">Cellura Data</string>
    <string name="continues">Continue</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="four_digital_code">Four digital code</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_password">Reset password</string>
    <string name="description">Description</string>
    <string name="yoga">YOGA</string>
    <string name="msg_not_connect_internet">Could not load data. Please connect to the network and restart the application.</string>
    <string name="duration_filter">Duration:</string>
    <string name="ability_filter">Ability:</string>
    <string name="focus_filter">Focus:</string>
    <string name="intensity_filter">Intensity:</string>
    <string name="downloaded">Downloaded</string>
    <string name="save_your_progress_to_access_your_personal_trainning_program">Save your progress to access your personal trainning program!</string>
    <string name="change_starts_here">Change Starts Here</string>
    <string name="google">google</string>
    <string name="close">close</string>
    <string name="it_s_recommended_to_connect_your_email_address_for_us_to_better_protect_your_information">it_s_recommended_to_connect_your_email_address_for_us_to_better_protect_your_information</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="confirm">CONFIRM</string>
    <string name="email">EMAIL</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google1">GOOGLE</string>
    <string name="string1">It’s recommended to connect your email address for us to better protect your information.</string>

</resources>
