<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_yoga_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xxxxx_large"
            android:text="We have sent a four digital code on your email. "
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_x_large"
            android:layout_marginTop="@dimen/space_x_large"
            android:layout_marginEnd="@dimen/space_x_large"
            android:background="@drawable/background_edittext"
            android:hint="@string/four_digital_code"
            android:padding="@dimen/space_normal"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_x_large"
            android:layout_marginTop="@dimen/space_normal"
            android:layout_marginEnd="@dimen/space_x_large"
            android:background="@drawable/background_edittext"
            android:hint="@string/new_password"
            android:padding="@dimen/space_normal"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_x_large"
            android:layout_marginTop="@dimen/space_normal"
            android:layout_marginEnd="@dimen/space_x_large"
            android:background="@drawable/background_edittext"
            android:hint="@string/confirm_password"
            android:padding="@dimen/space_normal"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/text_size_small" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_xxx_large"
            android:layout_marginTop="@dimen/space_xxx_large"
            android:layout_marginEnd="@dimen/space_xxx_large"
            android:background="@drawable/background_gradient"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</layout>