<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/bt_poses"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/background_gray_light_corner"
                android:gravity="center"
                android:minWidth="90dp"
                android:text="@string/poses"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bt_blocks"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:minWidth="90dp"
                android:text="@string/blocks"
                android:textAllCaps="false"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bt_favorites"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:minWidth="90dp"
                android:text="@string/favorites"
                android:textAllCaps="false"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_poses"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</layout>